--- a/er.css
+++ b/er.css
@@ -48,8 +48,10 @@
 
 .aboutMain {
     position : absolute;
+    display: flex;
+    flex-direction: column;
     width : 50%;
-    height : 70%;
+    min-height : 70%;
     transform: translate(-50%, -45%);
     left : 50%;
     top : 45%;
@@ -76,12 +78,13 @@
     position : fixed;
     top : 1px;
     left : 5px;
-    width : 100%;
+    width : 5%;
 }
 
 .darkstar {
     font-size : 50px;
     font-family : 'arial';
+    cursor : pointer;
 }
 
 /* magic circles */
