--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,5 @@
+@import '../styles.scss';
+
 h1 {
     font-size: 4em;
     margin-bottom: .1em;
@@ -24,12 +26,12 @@ p {
     margin: 0 auto;
     width: 90%;
     max-width: 900px;
-    background-color: gainsboro;
+    background-color: $background;
 }
 
 .colors {
-    background-color: gainsboro;
-    background-image: linear-gradient(45deg, #ffd23f, #ee4266, #540d6e);
+    background-color: $background;
+    background-image: linear-gradient(45deg, $yellow, $pink, $purple);
     background-clip: text;
     -webkit-background-clip: text;
     -moz-background-clip: text;
@@ -39,3 +41,10 @@ p {
     -webkit-text-fill-color: transparent; 
     -moz-text-fill-color: transparent;
 }
+
+.content ul li:hover {
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
+}
+
+
