--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header in progress! there'll be a floating image up here and a dark mode button</p>
+<div style="display:flex; justify-content:space-between; width:90%">
+    <div (click)="onClick()" class="icon-boundry">
+        <img class="icon" src="../../assets/img128.jpg" >
+        <div class="icon-border"></div>
+    </div>
+</div>
