minor changes for initial merge to live

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,6 +22,12 @@
       <li>
         other stufffffff
       </li>
+      <li>
+        favicon
+      </li>
+      <li>
+        mobile support
+      </li>
     </ul>
   </div>
 </div>
