--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,14 +10,70 @@ body {
 }
 
 a {
-    text-decoration: underline;
+    // text-decoration: underline;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
+    text-decoration-color: transparent;
+    cursor: pointer;
+}
+
+a:hover {
+    font-style: italic;
     -webkit-text-fill-color: transparent; 
     -moz-text-fill-color: transparent;
 }
 
-a:hover {
-    text-decoration: underline;
-    font-style: italic;
+// pulled from old app.component.scss
+
+h1 {
+    font-size: 4em;
+    margin-bottom: .1em;
+}
+
+h3 {
+    font-size: 2em;
+    color: $secondary;
+    margin-bottom: .1em;
+}
+
+hr {
+    background-image: inherit;
+    height: 2px;
+    border: 0;
+}
+
+p {
+    font-size: 1em;
+    color: $secondary;
+}
+
+ul li {
+    color: $secondary
+}
+
+.content {
+    margin: 0 auto;
+    width: 90%;
+    max-width: 900px;
+    background-color: $background;
+}
+
+.colors {
+    background-color: $background;
+    background-image: linear-gradient(45deg, $yellow, $pink, $purple);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+}
+
+.color-text {
+    -webkit-text-fill-color: transparent; 
+    text-decoration-color: transparent;
+    -moz-text-fill-color: transparent;
+}
+
+.content ul li:hover {
+    text-decoration-color: transparent;
     -webkit-text-fill-color: transparent; 
     -moz-text-fill-color: transparent;
 }
