fixing some build funnies + starting docs page

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -13,7 +13,7 @@
 }
 
 .icon-border {
-    background-image: conic-gradient($pink, $purple, $yellow, $pink);
+    background-image: conic-gradient($pink, $purple, $dark-purple, $purple, $pink, $yellow, $pink);
     position: absolute;
     height: 200%;
     width: 200%;
