--- a/src/app/project1/project1.component.html
+++ b/src/app/project1/project1.component.html
@@ -1,3 +1,7 @@
-<p>project1 works!</p>
-
-<!-- <router-outlet></router-outlet> -->
+<div class="content">
+    <div class="colors dark">
+        <h1 class="color-text">Project 1</h1>
+        <h2 class="color-text">interface to a smart object<object data="" type=""></object></h2>
+        <hr>
+    </div>
+</div>
