--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,8 @@ $secondary: #423e37;
 $yellow: #ffd23f;
 $pink: #ee4266;
 $purple: #540d6e;
+$dark-purple: #222444;
+
 
 body {
     background-color: $background;
@@ -42,6 +44,12 @@ hr {
     border: 0;
 }
 
+.colors img {
+    background-clip: border-box;
+    background-image: inherit;
+    border: 4px solid;
+}
+
 p {
     font-size: 1em;
     color: $secondary;
@@ -60,10 +68,18 @@ ul li {
 
 .colors {
     background-color: $background;
-    background-image: linear-gradient(45deg, $yellow, $pink, $purple);
     background-clip: text;
     -webkit-background-clip: text;
     -moz-background-clip: text;
+}
+
+.colors.bright {
+    background-image: linear-gradient(45deg, $yellow, $pink, $purple);
+
+}
+
+.colors.dark {
+    background-image: linear-gradient(60deg, $dark-purple, $purple, $pink);
 }
 
 .color-text {
