--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-header style="position:static;" ></app-header>
+<app-header style="position:sticky;" ></app-header>
+<app-scroll-to-top></app-scroll-to-top>
 
 <router-outlet></router-outlet>
