--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,7 @@
-<p>404 not found</p>
-<router-outlet></router-outlet>
+<div class="content">
+    <div class="colors bright">
+        <h3>404</h3>
+        <p>well it looks like you're lost. Lets get you <a routerLink="">back on the right track</a></p>
+    </div>
+</div>
 
