--- a/src/app/project1/project1.component.html
+++ b/src/app/project1/project1.component.html
@@ -1,7 +1,46 @@
 <div class="content">
     <div class="colors dark">
         <h1 class="color-text">Project 1</h1>
-        <h2 class="color-text">interface to a smart object<object data="" type=""></object></h2>
+        <h3 class="color-text">interface to a smart object</h3>
         <hr>
+        <h2 class="color-text">Exploration Sketches</h2>
+        <hr>
+        <div class="img-wrap">
+            <img src="../../assets/project1/sketch1.jpg">
+        </div>
+        <br>
+        <div class="img-wrap">
+            <img src="../../assets/project1/sketch2.jpg">
+        </div>
+        <br>
+        <div class="img-wrap">
+            <img src="../../assets/project1/sketch3.jpg">
+        </div>
+        <br>
+
+        <h2 class="color-text">Final Sketches</h2>
+        <hr>
+        <div class="img-wrap">
+            <img src="../../assets/project1/finalsketch1.jpg">
+        </div>
+        <div class="img-wrap">
+            <img src="../../assets/project1/finalsketch2.jpg">
+        </div>
+
+        <h2 class="color-text">Requirements & Interview Findings</h2>
+        <hr>
+        <p>My initial requirements that I settled on were having the main page hold the most important controls: water temperature and water pressure, and putting all other controls into submenus accessible from the main page via "app" buttons. The "apps" to be included were: Profiles, Timer, Music player and Shower spray pattern.</p>
+        <p>There would also be a status bar at the top that showed the user the most important information, including the real time and time remaining in the shower. </p>
+        <p>Through my interview findings I learned that my intentions for many of the controls were unclear. For example I did not initially have a label on the water pressure setting so people did not know what the percentage on the main page was. People also did not immediately understand the "-00:00" for time remaining at first, I suspect that this was due to it being a sketch and not also not being labeled.</p>
+        <p>A point that stood out to me pointed out that I did not have back buttons on every page, which I had envisioned when designing the pages, yet forgot to include in the sketches.</p>
+
+        <h2 class="color-text">Detailed Description of interface</h2>
+        <hr>
+        <p>Describe your interface in detail: Explain the features and controls. Include screenshots to illustrate
+        </p>
+
+        <h2 class="color-text">Video Demo</h2>
+        <hr>
+        <p>Include a 2-3 minute demo video, showing your interface in action.  The easiest way to record this is with a screen capture tool, which also captures audio- such as Quicktime.  Use a voiceover to explain your application.  Demo videos should be sufficient on their own, but can reference your documentation.  Include the name of the project, your name, the project components, and how your application works.</p>
     </div>
 </div>
