--- a/src/styles.scss
+++ b/src/styles.scss
@@ -61,7 +61,15 @@ img {
 .colors .img-wrap {
     background-image: inherit;
     max-width: 100%;
+    // width: auto;
+    display: inline-block;
     padding: 5px;
+    padding-bottom: 2px;
+}
+
+.video-wrap {
+    max-width: 100%;
+    padding-bottom: 62.5%;
 }
 
 p {
