--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,6 +8,9 @@
     <h3>Project 1 "Interface to a smart device"</h3>
     <p>read the documentation <strong><a class="color-text" routerLink="documentation/project1">here!</a></strong></p>
 
+    <h3>Project 2 "Alterna-Canvas"</h3>
+    <p>read the documentation <strong><a class="color-text" routerLink="documentation/project2">here!</a></strong></p>
+
     <h3>
       Coming soon...
     </h3>
