--- a/src/app/project1/project1.component.html
+++ b/src/app/project1/project1.component.html
@@ -104,7 +104,7 @@
         <h2 class="color-text">Video Demo</h2>
         <hr>
         <div class="img-wrap video-wrapper">
-            <iframe width="100%" src="https://www.youtube.com/embed/gGNcZlj4RoQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="500px" src="https://www.youtube.com/embed/gGNcZlj4RoQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <br>
     </div>
