--- a/src/app/scroll-to-top/scroll-to-top.component.html
+++ b/src/app/scroll-to-top/scroll-to-top.component.html
@@ -1,3 +1,3 @@
 <div class="scroll-to-top" [ngClass]="{'show-scrollTop': windowScrolled}" (click)="scrollToTop()">
-    <i class="material-icons md-48" style="color:#423e37; font-size:3em; color:lightgray; margin: auto 0;">arrow_upward</i>
+    <i class="material-icons md-48" style="color:#423e37; font-size:3em; color:lightgray; margin: auto 0; user-select: none;">arrow_upward</i>
   </div>
