initializing project 3 documentation

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,6 +11,9 @@
     <h3>Project 2 "Alterna-Canvas"</h3>
     <p>read the documentation <strong><a class="color-text" routerLink="documentation/project2">here!</a></strong></p>
 
+    <h3>Project 3 "UC AR-Verse"</h3>
+    <p>read the documentation <strong><a class="color-text" routerLink="documentation/project3">here!</a></strong></p>
+
     <h3>
       Coming soon...
     </h3>
