--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,6 +69,19 @@ img {
     padding-bottom: 2px;
 }
 
+app-picture-frame {
+    background-image: inherit;
+}
+
+.colors app-picture-frame .img-wrap {
+    background-image: inherit;
+    max-width: 100%;
+    // width: auto;
+    display: inline-block;
+    padding: 5px;
+    padding-bottom: 2px;
+}
+
 .video-wrap {
     max-width: 100%;
     padding-bottom: 62.5%;
