--- a/src/app/project3/project3.component.html
+++ b/src/app/project3/project3.component.html
@@ -1,20 +1,174 @@
 <div class="content">
-    <div class="colors blue">
+    <div class="colors uc">
         <h1 class="color-text">Project 3</h1>
         <h3 class="color-text">UC AR-Verse</h3>
         <h3 class="color-text">Nishanth Chidambaram, Ethan Fidler, Josh Zack</h3>
         <hr>
         <h2 class="color-text">Table of Contents (hyperlinked)</h2>
         <ul>
-            <li><a href="#/documentation/project3#CGoalsAnchor">C Goals</a></li>
+            <li><a href="#/documentation/project3#CGoalsAnchor">Part 1: Content Creation</a></li>
+            <ul>
+                <li><a href="#/documentation/project3#CGoalsAnchor2">What people post on Campus</a></li>
+                <li><a href="#/documentation/project3#CGoalsAnchor3">Sketching</a></li>
+                <li><a href="#/documentation/project3#CGoalsAnchor4">Modeling</a></li>
+            </ul>
+            <li><a href="#/documentation/project3#BGoalsAnchor">Part 2: User interfaces and interaction in AR using a mobile device</a></li>
+            <ul>
+                <li><a href="#/documentation/project3#BGoalsAnchor2">Finding AR content</a></li>
+                <li><a href="#/documentation/project3#BGoalsAnchor3">Displaying AR Content</a></li>
+                <li><a href="#/documentation/project3#BGoalsAnchor4">Interacting with AR content</a></li>
+            </ul>
+            <li><a href="#/documentation/project3#AGoalsAnchor">Part 3: AR-glasses</a></li>
+            <ul>
+                <li><a href="#/documentation/project3#AGoalsAnchor2">Finding AR content</a></li>
+                <li><a href="#/documentation/project3#AGoalsAnchor3">Displaying AR Content</a></li>
+                <li><a href="#/documentation/project3#AGoalsAnchor4">Interacting with AR content</a></li>
+            </ul>
         </ul>
 
 
 
-        <h2 class="color-text" id="CGoalsAnchor">C Goals</h2>
+        <h2 class="color-text" id="CGoalsAnchor">Part 1: Content Creation</h2>
         <hr>
-        <app-picture-frame imagePath="../../assets/project2/preliminary_sketch1.jpg"></app-picture-frame>
-        <app-picture-frame imagePath="../../assets/project2/preliminary_sketch1.jpg"></app-picture-frame>
-        <app-picture-frame imagePath="../../assets/project2/preliminary_sketch1.jpg"></app-picture-frame>
+        <h3 class="color-text" id="CGoalsAnchor2">What people post on Campus</h3>
+        <p>We found that people would put posters up anywhere where people would be walking through. Art exhibits existed almost exclusively in DAAP or the Library. A theme that we noticed was signs that directed you to an event or location.</p>
+        <p>The main thing that is different about AR content is that it can be interactable much easier. Currently a content creator would need to post a QR code to add interactivity to just a poster. AR would allow interactivity to be baked into content like quick RSVPing to events and autometically adding them to a calendar.</p>
+
+        <p>Interview Results</p>
+        <ul>
+            <li>Questions for Students</li>
+            <ul>
+                <li>What are some things you would like for fliers to do?</li>
+                <ul>
+                    <li>guide people to events / locations.</li>
+                    <li>Could have good use case at stadiums or conventions / this might <i>only</i> work in these cases.</li>
+                    <li>Would want easy access to external links & social media.</li>
+                    <li>Sort signposts based on groups or interests.</li>
+                </ul>
+                <li>What is some information you would like when you first enter a building?</li>
+                <ul>
+                    <li>Needs an “alternative viewing mode”: Bird's eye view so that someone can see all events in an area.</li>
+                    <li>Building hours (specifically: library hours but applies to all buildings on campus)</li>
+                    <li>Allow the user to add notes to buildings: Locations of classes.</li>
+                    <li>"Traffic" data: busiest and slowest times of day.</li>
+                    <li>"Quest Markers": highlighted areas of interest for things students may need to do (could be applied to events)</li>
+                    <li>Show a list of all local events when enterring an area.</li>
+                    <li>If it's open or not.</li>
+                </ul>
+            </ul>
+            <li>Questions for Organizations</li>
+            <ul>
+                <li>What are some features you would like?</li>
+                <ul>
+                    <li>“Like or RSVP” to event to get notified.</li>
+                    <li>Automatic deletion of fliers after the event has passed.</li>
+                    <li>“Verified badge” for official school orgs.</li>
+                    <li>The ability to edit every single one of their posted fliers at once.</li>
+                </ul>
+            </ul>
+            <li>Question for campus staff</li>
+            <ul>
+                <li>What are some features that you could use to monitor AR posts?</li>
+                <ul>
+                    <li>Locations can choose which types of nodes are visible are in every area. (UC can disallow people from posting things in Nippert stadium)</li>
+                    <li>Potentially add virtual items to the open spaces ie like an AR museam.</li>
+                </ul>
+            </ul>
+        </ul>
+
+        <app-picture-frame imagePath="../../assets/project3/c/location1.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/c/location2.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/c/location3.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/c/location4.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/c/location5.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/c/location6.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/c/location7.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/c/location8.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/c/location9_10.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/c/webpage1.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/c/webpage2.png"></app-picture-frame>
+
+        <h3 class="color-text" id="CGoalsAnchor3">Sketching</h3>
+        <app-picture-frame imagePath="../../assets/project3/c/example_sketch.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/c/example_sketch2.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/c/example_sketch3.jpg"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/c/example_sketch4.jpg"></app-picture-frame>
+
+        <h3 class="color-text" id="CGoalsAnchor4">Modeling</h3>
+        <p>We designed a model in figma mocks up what the content creation would look like for someone uploading a virtual poster and adding it to an AR corkboard and previewing their newly created AR content.</p>
+        <app-picture-frame imagePath="../../assets/project3/c/figma_Creation.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/c/figma_preview.png"></app-picture-frame>
+
+        <h2 class="color-text" id="BGoalsAnchor">Part 2: User interfaces and interaction in AR using a mobile device</h2>
+        <hr>
+
+        <h3 class="color-text" id="BGoalsAnchor2">Finding AR content</h3>
+
+        <h3 class="color-text"> 10x5Sketching</h3>
+        <app-picture-frame imagePath="../../assets/project3/b/10min1.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/b/10min2.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/b/10min3.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/b/10min4.png"></app-picture-frame>
+
+        <h3 class="color-text"> 10x5Sketching pt 2</h3>
+        <app-picture-frame imagePath="../../assets/project3/b/5min1.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/b/5min2.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/b/Storyboard1.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/b/Storyboard2.png"></app-picture-frame>
+
+        <h3 class="color-text" id="BGoalsAnchor3">Displaying AR content</h3>
+        <h3 class="color-text"> Figma Models</h3>
+        <app-picture-frame imagePath="../../assets/project3/b/Pathing_tool.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/b/figma_content_finding_2.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/b/figma_labelled_displaying_content.png"></app-picture-frame>
+
+
+        <h3 class="color-text" id="BGoalsAnchor4">Interacting with AR content</h3>
+        <p>The interaction elicitation session was done on the pathfinding model from above. The user was informed that the model was a mockup of a phone screen that they were holding out infront of them. The user clicked on the buttons to nagivate through the menu, also they mentioned panning the camera to look around. On the map they used pinch/move gestures with two fingers to pan and zoom on the map. On the final screen where the path was laid out in front of them they moved the camera around to see the path ahead of them. These findings were translated into storyboard sketches for the theoretical design team.</p>
+        <app-picture-frame imagePath="../../assets/project3/b/part3_exploration1.jpg"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/b/part3_exploration2.jpg"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/b/Part3_storyboard.png"></app-picture-frame>
+
+        <h2 class="color-text" id="AGoalsAnchor">Part 3: AR-glasses</h2>
+        <hr>
+
+        <h3 class="color-text" id="AGoalsAnchor2">Finding AR content</h3>
+
+        <h3 class="color-text"> 10min Sketching & Storyboarding</h3>
+        <app-picture-frame imagePath="../../assets/project3/a/10min1.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/a/10min2.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/a/10min3.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/a/discovering_content_ARvision.jpg"></app-picture-frame>
+
+        <h3 class="color-text" id="AGoalsAnchor3">Displaying AR content</h3>
+        <h3 class="color-text"> Figma Modeling</h3>
+        <app-picture-frame imagePath="../../assets/project3/a/figma_ARvision_bus_stop_rev1.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/a/Glasses_Pathing.png"></app-picture-frame>
+
+        <h3 class="color-text"> Simulation Modeling</h3>
+        <app-picture-frame imagePath="../../assets/project3/a/i2.jpg"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/a/i3.jpg"></app-picture-frame>
+
+        <h3 class="color-text" id="AGoalsAnchor4">Interacting with AR content</h3>
+        <p>The interaction elicitation session was done on the panorama model from above. The user "Clicked" on the poster with their finger like they would a button. The user then attempted to drag around the poster by the top of the "window". They also tried to scale it using two-finger gestures. They finally closed it by clicking the x button in the top corner.</p>
+        <app-picture-frame imagePath="../../assets/project3/a/3usage1.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/a/3usage2.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/a/3usage3.png"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/a/3usage4.png"></app-picture-frame>
+        <p>The following storyboard simulation was made to reflect what the user wanted to do with the model.</p>
+        <app-picture-frame imagePath="../../assets/project3/a/i4.jpg"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/a/i5.jpg"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/a/i6.jpg"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/a/i7.jpg"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/a/i8.jpg"></app-picture-frame>
+        <app-picture-frame imagePath="../../assets/project3/a/i9.jpg"></app-picture-frame>
+
+        <h2 class="color-text" id="videoDemoAnchor">Video Demo</h2>
+        <hr>
+        <p><i>View Demo recording currently in progress</i></p>
+        <div class="img-wrap video-wrapper">
+            <!-- <iframe width="500px" height="200px" src="https://www.youtube.com/embed/xUfUJU1_mUQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+        </div>
+        <br>
     </div>
 </div>
