--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ $blue: #222999;
 $light-gradient: linear-gradient(45deg, $yellow, $pink, $purple);
 $dark-gradient: linear-gradient(95deg, $dark-purple, $purple, $pink);
 $blue-gradient: linear-gradient(60deg, $blue, $dark-purple, $purple, $pink);
+$uc-gradient: linear-gradient(60deg, rgba(0,0,0,1) 0%, rgba(240,0,0,1) 100%);
 
 
 body {
@@ -121,6 +122,10 @@ ul li {
 
 .colors.blue {
     background-image: $blue-gradient,
+}
+
+.colors.uc {
+    background-image: $uc-gradient,
 }
 
 .color-text {
