adding video to page

--- a/src/app/project3/project3.component.html
+++ b/src/app/project3/project3.component.html
@@ -167,7 +167,7 @@
         <hr>
         <p><i>View Demo recording currently in progress</i></p>
         <div class="img-wrap video-wrapper">
-            <!-- <iframe width="500px" height="200px" src="https://www.youtube.com/embed/xUfUJU1_mUQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
+            <iframe src="https://drive.google.com/file/d/1qTyIasd2WcQz0OA35fZ8vFFOCJeU1kQA/preview" width="640" height="480" allow="autoplay"></iframe>        
         </div>
         <br>
     </div>
